# tdp-lib

./: .gitignore  .licenserc.json  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements-dot.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pull-request.yml  test.yml
alembic_migration/: README.md  migration_basesettings.py
alembic_migration/mysql/: env.py
alembic_migration/postgresql/: env.py
alembic_migration/sqlite/: env.py
dev/: Dockerfile  docker-compose.yaml  docker-entrypoint.sh
docs/: components.md  conf.py  index.md  index.rst  tdp.cli.commands.rst  tdp.cli.rst  tdp.components.rst  tdp.core.models.rst  tdp.core.repository.rst  tdp.core.rst  tdp.core.runner.rst  tdp.rst
docs/cli/: developer_quick_start.md  index.md
docs/core/: dag.md  index.md  models.md  repository.md  runner.md  service_manager.md  variables.md
docs/developer/: code_style.rst  components.rst  index.rst  operations.rst
docs/developer/cli/: developer_quick_start.rst  index.rst
docs/developer/core/: dag.rst  deployment.rst  index.rst  models.rst  runner.rst  service_manager.rst  variables.rst
docs/source/: conf.py  tdp.cli.commands.plan.rst  tdp.cli.commands.rst  tdp.core.deployment.rst  tdp.core.models.rst  tdp.core.rst  tdp.core.variables.rst
docs/source/developer/: index.rst
migrations/: README  basesettings.py  env.py
migrations/tests/: conftest.py
scripts/: import_vars.py  playbooks.py
tdp/: __init__.py  alembic.ini  conftest.py  dao.py  exception_playbooks.py  find_tdp_lib_root_folder.py  queries.py  test_dao.py  utils.py
tdp/alembic_migration/: README.md
tdp/alembic_migration/postgresql/: env.py
tdp/alembic_migration/sqlite/: script.py.mako
tdp/cli/: __main__.py  context.py  dag_debug.py  init_db.py  logger.py  params.py  queries.py  session.py  test_get_sch_status.py  test_queries.py  utils.py
tdp/cli/commands/: browse.py  conftest.py  dag.py  default_diff.py  deploy.py  deploy_danger_fix_running.py  init.py  nodes.py  operations.py  ops.py  playbooks.py  queries.py  reconfigure.py  restart_required.py  resume.py  run.py  service_versions.py  status.py  test_default_diff.py  test_deploy.py  test_init.py  test_nodes.py  test_operations.py  test_ops.py  test_playbooks.py  test_service_versions.py  test_status.py  test_validate.py  utils.py  validate.py  vars_edit.py
tdp/cli/options/: __init__.py  collections_option.py  hosts_option.py  validate_option.py  vars_option.py
tdp/cli/params/: __init__.py  collections_option.py  conf_option.py  database_dsn_option.py  overrides_option.py  vars_option.py
tdp/cli/run/: __main__.py  session (copie).py
tdp/components/: __init__.py  hive.yml  yarn.yml
tdp/core/: ansible_loader.py  cluster_status.py  collection.py  collections.py  component.py  components.yml  conftest.py  constants.py  dag.py  dag_dot.py  db.py  exceptions.py  filters.py  git_repository.py  inventory_reader.py  operation.py  repository.py  repository_manager.py  runner.py  service_component_host_name.py  service_component_name.py  service_manager.py  test_collection.py  test_collections.py  test_filters.py  test_git_repositoy_manager.py  test_operation.py  test_variables.py  topology.py  types.py  utils.py  variables.py
tdp/core/collection/: __init__.py  collection.py  read_dag.py
tdp/core/collections/: __init__.py  collection_reader.py  collections.py  playbook_validate.py
tdp/core/deployment/: __init__.py  ansible_executor.py  conftest.py  deployment_iterator.py  deployment_plan.py  deployment_runner.py  executor.py  test_deployment_plan.py  test_deployment_runner.py
tdp/core/entities/: __init__.py  deployment_entity.py  entity_name.py  hostable_entity_name.py  hosted_entity.py  hosted_entity_status.py  operation.py  operation_entity.py  operation_name.py  test_deployment_entity.py  test_hostable_entity_name.py  test_hosted_entity.py  test_hosted_entity_status.py  test_operation.py  test_operation_entity.py  test_operation_name.py
tdp/core/models/: __init__.py  action_log.py  base.py  base_model.py  component_version_log.py  deployment_log.py  deployment_model.py  deployment_type_enum.py  enums.py  operation_log.py  operation_model.py  sch_status_log.py  sch_status_log_model.py  service.py  service_component_log.py  service_log.py  stale_component.py  state_enum.py  test_base.py  test_db.py  test_deployment_log.py  test_models.py  test_stale_component.py
tdp/core/repository/: git_repository.py  repository.py  test_git_repository.py
tdp/core/runner/: __init__.py  action_runner.py  ansible_executor.py  conftest.py  deployment_iterator.py  deployment_plan.py  deployment_runner.py  executor.py  operation_runner.py  test_action_runner.py  test_deployment_plan.py  test_deployment_runner.py  test_operation_runner.py
tdp/core/variables/: __init__.py  cluster_variables.py  exceptions.py  helpers.py  inspection.py  messages.py  planner.py  scanner.py  schema.py  service_variables.py  test_variables.py  variables.py
tdp/devtools/: dag_debug.py  run.py
tdp/devtools/run/: __main__.py  colors.py  env_default.py  session.py
test_dag_order/: README.md  conftest.py  constants.py  helpers.py  test_reconfigure.py
tests/: conftest.py
tests/e2e/: conftest.py  test_tdp.py  test_tdp_default_diff.py  test_tdp_deploy.py  test_tdp_init.py  test_tdp_ops.py  test_tdp_plan_dag.py  test_tdp_plan_ops.py  test_tdp_plan_reconfigure.py  test_tdp_plan_resume.py  test_tdp_status_edit.py  test_tdp_status_generate_stales.py  test_tdp_status_prune_hosts.py  test_tdp_status_show.py  test_tdp_status_update.py  test_tdp_vars_validate.py
tests/local/: test_action_runner.py
tests/unit/: conftest.py  test_dao.py  test_utils.py
(+96 files in other folders)
