[tool.poetry]
name = "tdp-lib"
version = "1.0.0"
description = "TDP library for TDP Manager"
authors = ["Xavier Hermand <diode-hermand.consultant@dgfip.finances.gouv.fr>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/TOSIT-FR/tdp-lib"
repository = "https://github.com/TOSIT-FR/tdp-lib"
documentation = "https://github.com/TOSIT-FR/tdp-lib"
packages = [{ include = "tdp" }]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
ansible-core = "2.15.1"
networkx = "2.5.1"
PyYAML = "^6.0.1"
matplotlib = { version = "3.3.4", optional = true }
pydot = { version = "1.4.2", optional = true }
GitPython = "3.1.18"
SQLAlchemy = "^2.0.19"
click = "8.0.4"
tabulate = "0.8.9"
python-dotenv = "0.20.0"
jsonschema = "4.10.3"
pydantic = "^2.6.0"
psycopg2 = { version = "^2.9.9", optional = true }
psycopg2-binary = { version = "^2.9.9", optional = true }
pymysql = { version = "^1.1.0", optional = true }
alembic = "^1.13.1"
alembic-postgresql-enum = "^1.2.0"
numpy = { version = "<2.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.11.12"
pytest-xdist = "^3.5.0"
python-lorem = "^1.3.0.post1"

[tool.poetry.extras]
visualization = ["matplotlib", "pydot", "numpy"]
postgresql = ["psycopg2"]
postgresql-binary = ["psycopg2-binary"]
mysql = ["pymysql"]

[tool.poetry.scripts]
tdp = "tdp.cli.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
preview = true
select = ["F", "W", "I", "CPY"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "\\A# Copyright \\d{4} TOSIT\\.IO\r?\n# SPDX-License-Identifier: Apache-2\\.0"


[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
